# generative_models_practice

./: .gitignore  CMakeLists.txt
docker/: build_image_and_run_container.sh
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/RWKV-7/: main.py  main_torch.py  rwkv_v7_jax.py  rwkv_v7_numpy.py
python/cosmos/: .gitignore  README.md  convert_minerl_to_discrete_tokens.py  convert_wayve101_to_discrete_tokens.py  dataset.py  dataset_minerl.py  llama_transformer.py  main.py  measure_inference_speed_of_mamba2.py  test_mamba2.py  train.py  train_minerl.py
python/cosmos/models/: config.py  llama_transformer.py  mamba2.py  minimal_manba2.py  vanilla_transformer.py
python/diffusion_model/: README.md  data_loader.py  main.py  main_dit.py  models.py  sample.py  train.py  train.sh  train_flow_matching.py
python/flow_matching/: README.md  models.py  train.sh  train_flow_matching.py
python/fsq/: .gitignore  fsq.py  main.py  memo.md  network.py
python/fsq/pytorch/: data_loader.py  fsq.py  main.py  network.py
python/mask_git/: README.md  data_loader.py  layers.py  losses.py  main.py  networks.py  quantizers.py
python/real-time_recurrent_learning/: main.py
python/sequence_modeling/: dataset.py  train.py
python/video_generation/: README.md  common.py  dataset.py  models.py  sample.py  sequence_models.py  train.py  train.sh
script/: apply_clang_format.sh  build_and_exec.sh  build_and_exec_generate.sh  build_and_exec_train.sh  download_libtorch.sh
src/: glob.hpp  main.cpp  main_functions.cpp  main_functions.hpp  save_image.hpp  vae.cpp  vae.hpp
(+6 files in other folders)
